kubernetes/Project-3-kubernetes-ingress-routing/apache-clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  type: ClusterIP
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
